--- a/CurrencyApp/Views/Home/Index.cshtml
+++ b/CurrencyApp/Views/Home/Index.cshtml
@@ -2,7 +2,32 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container-fluid">
+        <div class="row text-center">
+            <div class="col-xs-12 col-sm-12 col-lg-6">
+                <canvas id="myChart"></canvas>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-lg-6">
+                <canvas id="myChart1"></canvas>
+            </div>
+        </div>
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.js"></script>
+<script src="site.js"></script>
+
+<!-- Bootstrap 4 -->
+<div class="btn-group">
+    <!-- Кнопка -->
+    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Выполнить
+    </button>
+    <!-- Меню -->
+    <div class="dropdown-menu">
+        <a class="dropdown-item" href="#">Действие 1</a>
+        <a class="dropdown-item" href="#">Действие 2</a>
+        <a class="dropdown-item" href="#">Действие 3</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="#">Действие 4</a>
+    </div>
 </div>
