--- a/CurrencyApp/Views/News/TakeNews.cshtml
+++ b/CurrencyApp/Views/News/TakeNews.cshtml
@@ -2,11 +2,60 @@
     ViewData["Title"] = "News";
 }
 
-<div class="container-fluid mt-5" style="background-color: #eee">
+<div id="accordion">
+
+    <div class="card" style="margin-top:1rem">
+        <div class="card-header" style="vertical-align:middle" id="headingOne" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            <h5 class="mb-0">
+                Panel 1
+            </h5>
+        </div>
+
+        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+            <div class="card-body">
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+            </div>
+            <button class="btn btn-dark" style="float:right; margin: 0 2rem 1rem 0">Open</button>
+        </div>
+    </div>
+
+    <div class="card" style="margin-top:1rem">
+        <div class="card-header" id="headingTwo" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            <h5 class="mb-0">
+                Panel 2
+            </h5>
+        </div>
+        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+            <div class="card-body">
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+            </div>
+            <button class="btn btn-dark" style="float:right; margin: 0 2rem 1rem 0">Open</button>
+        </div>
+    </div>
+
+    <div class="card" style="margin-top:1rem">
+        <div class="card-header" id="headingThree" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            <h5 class="mb-0">
+                Panel 3
+            </h5>
+        </div>
+        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+            <div class="card-body">
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+            </div>
+            <button class="btn btn-dark" style="float:right; margin: 0 2rem 1rem 0">Open</button>
+        </div>
+    </div>
+
+</div>
+
+
+
+<div class="container-fluid mt-5">
     <div class="container p-5">
         <div class="card-deck">
 
-            <div class="card" style="width: 20rem">
+            <div class="card bg-light mb-3" style="width: 20rem">
                 <img src="https://cutt.ly/Tr2Z28Y" alt="" class="card-img-top" />
                 <div class="card-body">
                     <h4 class="card-title">Title</h4>
@@ -16,7 +65,7 @@
             </div>
 
 
-            <div class="card" style="width: 20rem">
+            <div class="card bg-light mb-3" style="width: 20rem">
                 <img src="https://cutt.ly/Tr2Z28Y" alt="" class="card-img-top" />
                 <div class="card-body">
                     <h4 class="card-title">Title</h4>
@@ -25,7 +74,7 @@
                 </div>
             </div>
 
-            <div class="card" style="width: 20rem">
+            <div class="card bg-light mb-3" style="width: 20rem">
                 <img src="https://cutt.ly/Tr2Z28Y" alt="" class="card-img-top" />
                 <div class="card-body">
                     <h4 class="card-title">Title</h4>
