--- a/CurrencyApp/Views/Home/Index.cshtml
+++ b/CurrencyApp/Views/Home/Index.cshtml
@@ -1,15 +1,13 @@
-﻿@{
-
-}
+﻿@model CurrencyApp.Models.Rates;
 
 <div class="container-fluid">
     <div class="row text-center">
-        <div class="col-xs-12 col-sm-12 col-lg-6">
-            <canvas id="myChart"></canvas>
-        </div>
-        <div class="col-xs-12 col-sm-12 col-lg-6">
-            <canvas id="myChart1"></canvas>
-        </div>
+        @for (int i = 0; i < CurrencyData.symbols.Count; i++)
+        {
+            <div class="col-xs-12 col-sm-12 col-lg-12">
+                <canvas id="myChart @i")></canvas>
+            </div>
+        }
     </div>
 </div>
 
@@ -30,4 +28,37 @@
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.js"></script>
-<script src="site.js"></script>
+
+@for (int i=0; i<CurrencyData.symbols.Count; i++)
+{
+    Random random = new Random();
+    int red = random.Next(255);
+    int green = random.Next(255);
+    int blue = random.Next(255);
+    
+    <script type="text/javascript">
+
+    var color = "rgb(@red,@green,@blue)";
+    var ctx = document.getElementById("myChart "+"@i").getContext('2d');
+
+    var eur = @Html.Raw(Json.Serialize(Rates.currencies[CurrencyData.symbols[i]]));
+    var dates = @Html.Raw(Json.Serialize(Rates.availableDates.Select(x => x.ToString("MMMM dd"))));
+
+    var chart = new Chart(ctx, {
+        type: 'line',
+        data: {
+            labels: dates,
+            datasets: [{
+                label: "@CurrencyData.symbols[i] exchange rate",
+                borderColor: color,
+                data: eur,
+            }]
+        },
+
+        options: {
+        }
+    });
+
+    </script>
+}
+
