--- a/CurrencyApp/Views/Shared/_Layout.cshtml
+++ b/CurrencyApp/Views/Shared/_Layout.cshtml
@@ -18,12 +18,17 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Data" asp-action="TakeData">Data</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="News" asp-action="TakeNews">News</a>
                         </li>
+
                     </ul>
                 </div>
             </div>
