--- a/CurrencyApp/Views/Data/TakeData.cshtml
+++ b/CurrencyApp/Views/Data/TakeData.cshtml
@@ -1,48 +1,42 @@
 ﻿@{
     ViewData["Title"] = "Data";
 }
-<form>
-    <div class="form-row">
-        <div class="form-group col-md-6">
-            <label for="inputEmail4">Email</label>
-            <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+
+    <form>
+        <div class="form-row align-items-center">
+            <div class="form-group col-md-4">
+                <label for="exampleInputFirstDate">Start at: </label>
+                <input type="date" class="form-control" id="exampleInputFirstDate" aria-describedby="firstDateDesc" placeholder="Enter first date">
+                <small id="firstDateDesc" class="form-text text-muted">The data from which the infographic will begin</small>
+            </div>
+
+            <div class="form-group col-md-4">
+                <label for="exampleInputLastDate">End at: </label>
+                <input type="date" class="form-control" id="exampleInputLastDate" aria-describedby="lastDateDesc" placeholder="Enter second date">
+                <small id="lastDateDesc" class="form-text text-muted">The last data which be shown on the infographic</small>
+            </div>
+
+            <div class="form-group col-md-4">
+                <label for="baseCurrency">Base currency: </label>
+                <input type="text" class="form-control" id="baseCurrency" aria-describedby="baseCurrencyDesc" placeholder="Enter base currency">
+                <small id="baseCurrencyDesc" class="form-text text-muted">Currency against which the charts will be built</small>
+            </div>
         </div>
-        <div class="form-group col-md-6">
-            <label for="inputPassword4">Password</label>
-            <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
+
+        <div class="row">
+            <div class="col-md-11">
+                @for (int i = 0; i < ViewBag.availableCurrencies.Length; i++)
+                {
+                    <div class="form-check form-check-inline col-md-1">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox @i">
+                        <label class="form-check-label" for="inlineCheckbox @i">@ViewBag.availableCurrencies[i]</label>
+                    </div>
+                }
+            </div>
+            <div class="col-md-1">
+                <button type="button" onClick="location.href='https://localhost:5001'" class="btn btn-primary">Find!</button>
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <label for="inputAddress">Address</label>
-        <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-    </div>
-    <div class="form-group">
-        <label for="inputAddress2">Address 2</label>
-        <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-    </div>
-    <div class="form-row">
-        <div class="form-group col-md-6">
-            <label for="inputCity">City</label>
-            <input type="text" class="form-control" id="inputCity">
-        </div>
-        <div class="form-group col-md-4">
-            <label for="inputState">State</label>
-            <select id="inputState" class="form-control">
-                <option selected>Choose...</option>
-                <option>...</option>
-            </select>
-        </div>
-        <div class="form-group col-md-2">
-            <label for="inputZip">Zip</label>
-            <input type="text" class="form-control" id="inputZip">
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="form-check">
-            <label class="form-check-label">
-                <input class="form-check-input" type="checkbox"> Check me out
-            </label>
-        </div>
-    </div>
-    <button type="submit" class="btn btn-primary">Sign in</button>
-</form>
+    </form>
+
+
