--- a/CurrencyApp/Views/Data/TakeData.cshtml
+++ b/CurrencyApp/Views/Data/TakeData.cshtml
@@ -1,42 +1,43 @@
 ﻿@{
     ViewData["Title"] = "Data";
 }
-
-    <form>
-        <div class="form-row align-items-center">
-            <div class="form-group col-md-4">
-                <label for="exampleInputFirstDate">Start at: </label>
-                <input type="date" class="form-control" id="exampleInputFirstDate" aria-describedby="firstDateDesc" placeholder="Enter first date">
-                <small id="firstDateDesc" class="form-text text-muted">The data from which the infographic will begin</small>
-            </div>
-
-            <div class="form-group col-md-4">
-                <label for="exampleInputLastDate">End at: </label>
-                <input type="date" class="form-control" id="exampleInputLastDate" aria-describedby="lastDateDesc" placeholder="Enter second date">
-                <small id="lastDateDesc" class="form-text text-muted">The last data which be shown on the infographic</small>
-            </div>
-
-            <div class="form-group col-md-4">
-                <label for="baseCurrency">Base currency: </label>
-                <input type="text" class="form-control" id="baseCurrency" aria-describedby="baseCurrencyDesc" placeholder="Enter base currency">
-                <small id="baseCurrencyDesc" class="form-text text-muted">Currency against which the charts will be built</small>
-            </div>
+@using (Html.BeginForm("Index", "Home", FormMethod.Post)){
+//<form id="mainForm" method="post" action="/Data/TakeData">
+    <div class="form-row align-items-center">
+        <div class="form-group col-md-4">
+            <label for="firstDate">Start at: </label>
+            <input type="date" class="form-control" id="firstDate" name="firstDate" aria-describedby="firstDateDesc" placeholder="Enter first date">
+            <small id="firstDateDesc" class="form-text text-muted">The data from which the infographic will begin</small>
         </div>
 
-        <div class="row">
-            <div class="col-md-11">
-                @for (int i = 0; i < ViewBag.availableCurrencies.Length; i++)
-                {
-                    <div class="form-check form-check-inline col-md-1">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox @i">
-                        <label class="form-check-label" for="inlineCheckbox @i">@ViewBag.availableCurrencies[i]</label>
-                    </div>
-                }
-            </div>
-            <div class="col-md-1">
-                <button type="button" onClick="location.href='https://localhost:5001'" class="btn btn-primary">Find!</button>
-            </div>
+        <div class="form-group col-md-4">
+            <label for="lastDate">End at: </label>
+            <input type="date" class="form-control" id="lastDate" name="lastDate" aria-describedby="lastDateDesc" placeholder="Enter second date">
+            <small id="lastDateDesc" class="form-text text-muted">The last data which be shown on the infographic</small>
         </div>
-    </form>
 
+        <div class="form-group col-md-4">
+            <label for="baseCurrency">Base currency: </label>
+            <input type="text" class="form-control" id="baseCurrency" name="baseCurrency" aria-describedby="baseCurrencyDesc" placeholder="Enter base currency">
+            <small id="baseCurrencyDesc" class="form-text text-muted">Currency against which the charts will be built</small>
+        </div>
+    </div>
 
+    <div class="row">
+        <div class="col-md-12 col-12 col-sm-12">
+            @for (int i = 0; i < ViewBag.availableCurrencies.Length; i++)
+            {
+                <div class="form-check form-check-inline col-md-1">
+                    <input class="form-check-input" type="checkbox" id="inlineCheckbox @i" name="inlineCheckbox" value="@ViewBag.availableCurrencies[i]">
+                    <label class="form-check-label" for="inlineCheckbox @i">@ViewBag.availableCurrencies[i]</label>
+                </div>
+            }
+        </div>
+    </div>
+    <div class="row text-center">
+        <div class="col-md-12" >
+            <button type="submit" onClick="location.href='https://localhost:5001/Home/Index'" class="btn btn-primary">Find!</button>
+        </div>
+    </div>
+//</form>
+}
