Small design changes

--- a/CurrencyApp/Views/Home/Index.cshtml
+++ b/CurrencyApp/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
                 int green = random.Next(255);
                 int blue = random.Next(255);
 
-                <div class="col-xs-12 col-sm-12 col-lg-12">
+                <div class="col-xs-12 col-sm-12 col-lg-12 mb-3">
                     <canvas id="myChart @i" )></canvas>
                 </div>
 
