--- a/CurrencyApp/Views/Home/Index.cshtml
+++ b/CurrencyApp/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
         }
 
         @if (CurrencyData.symbols != null &&
-           RequestData.startAt != RequestData.endAt)
+           CurrencyData.startAt != CurrencyData.endAt)
         {
             for (int i = 0; i < CurrencyData.symbols.Count; i++)
             {
