--- a/CurrencyApp/Views/Data/TakeData.cshtml
+++ b/CurrencyApp/Views/Data/TakeData.cshtml
@@ -36,7 +36,7 @@
     </div>
     <div class="row text-center">
         <div class="col-md-12" >
-            <button type="submit" onClick="location.href='https://localhost:5001/Home/Index'" class="btn btn-primary">Find!</button>
+            <button type="submit" class="btn btn-primary">Find!</button>
         </div>
     </div>
 
